fix link opacity targeting wrapping elements as well

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -43,8 +43,12 @@ h5 {
 a {
     color: var(--c-green);
     text-decoration: underline;
+    transition: all 0.1s ease-in;
 
     &:hover {
-        opacity: 0.8;
+        &:not(:has(*)) {
+            /* Style only for links with only text content */
+            opacity: 0.7;
+        }
     }
 }
